# finkit

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  roadmap.md  schema_reference.md  tools_reference.md  utilities_plan.md
example/: .env.example  finkit.example.toml  quickstart.md  starter.beancount
src/finkit/: __init__.py  cli.py  config.py  db.py  matching.py  models.py  operations.py  queries.py
src/finkit/analysis/: capital_gains.py  duplicates.py  export.py  import_report.py  payslip.py  portfolio.py  spending.py  tax_reconciliation.py  transfers.py  whatif.py
src/finkit/categorize/: batch.py  llm.py  payee_normalizer.py  rules.py
src/finkit/engine/: balances.py  lots.py  prices.py  validation.py
src/finkit/importers/: archive.py  directory_importer.py  document_classifier.py  document_ingester.py  file_importer.py  pdf_extractor.py  pdf_parsers.py  template_engine.py  template_store.py
src/finkit/market/: fetcher.py
src/finkit/mcp/: server.py
src/finkit/summaries/: __init__.py  capital_gains.py  daily_balances.py  monthly_balances.py  monthly_spending.py  net_worth.py  portfolio_holdings.py  registry.py
src/personalfinance/: __init__.py  agent.py  cli.py  config.py  ledger.py  matching.py  operations.py  queries.py  uuids.py
src/personalfinance/analysis/: capital_gains.py  export.py  portfolio.py  spending.py  whatif.py
src/personalfinance/categorize/: llm.py  rules.py
src/personalfinance/importers/: file_importer.py  pdf_extractor.py
tests/: conftest.py  test_analysis.py  test_balances.py  test_batch_recategorize.py  test_categorization.py  test_db.py  test_document_classifier.py  test_document_ingester.py  test_duplicates.py  test_import_report.py  test_importers.py  test_integration.py  test_ledger.py  test_lots.py  test_market.py  test_matching.py  test_operations.py  test_payee_normalizer.py  test_payslip.py  test_pdf_parsers.py  test_prices.py  test_queries.py  test_summaries.py  test_tax_reconciliation.py  test_template_engine.py  test_transfers.py  test_validation.py
tests/fixtures/: chase_checking.csv  hdfc_savings.csv  sample_chase.csv  sample_schwab.csv  schwab_brokerage.csv
(+2 files in other folders)
