[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finkit"
version = "0.1.0"
description = "Privacy-first personal/family finance toolkit"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pdfplumber>=0.11",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
excel = ["openpyxl>=3.1", "xlrd>=2.0"]
market = ["yfinance>=0.2", "pandas>=2.0"]
agent = ["rich>=13.0", "ollama>=0.3"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
finkit = "finkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
